# languages-sdk

./: .gitignore  CLAUDE.md  Dockerfile.test  README.md  mkdocs.yml
.github/workflows/: docs.yml  dotnet.yml  go.yml  java.yml  native-core.yml  python-native.yml  python.yml  rust.yml  typescript-native.yml  typescript.yml
docs/: CRYPTO_ADAPTER_SURFACE.md  CRYPTO_ALIGNMENT.md  DILITHIA_RENAME_PLAN.md  ECOSYSTEM_SURFACE.md  REGISTRY_RELEASE_SETUP.md  getting-started.md  index.md
docs/api/: client.md  crypto.md  types.md  zk.md
docs/examples/: dotnet.md  go.md  index.md  java.md  python.md  rust.md  typescript.md
docs/guides/: native-bridges.md  signing-transactions.md  smart-contracts.md  sync-async.md  zk-shielded.md
docs/reference/: architecture.md
dotnet/: Dockerfile.test  README.md
dotnet/Dilithia.Sdk/: Dilithia.Sdk.csproj  DilithiaClient.cs  DilithiaClientBuilder.cs
dotnet/Dilithia.Sdk.Tests/: ClientExtendedTests.cs  ClientTests.cs  CredentialTests.cs  CryptoModelTests.cs  Dilithia.Sdk.Tests.csproj  ModelTests.cs  MultisigTests.cs  NameServiceTests.cs  ValidationTests.cs
dotnet/Dilithia.Sdk/Crypto/: DilithiaAccount.cs  DilithiaKeypair.cs  DilithiaSignature.cs  IDilithiaCryptoAdapter.cs  NativeCryptoBridge.cs
dotnet/Dilithia.Sdk/Exceptions/: DilithiaException.cs  HttpException.cs  RpcException.cs  TimeoutException.cs
dotnet/Dilithia.Sdk/Internal/: JsonRpcClient.cs
dotnet/Dilithia.Sdk/Models/: Address.cs  Balance.cs  ContractAbi.cs  Credential.cs  CredentialSchema.cs  DeployPayload.cs  GasEstimate.cs  MultisigTx.cs  MultisigWallet.cs  NameRecord.cs  NetworkInfo.cs  Nonce.cs  QueryResult.cs  Receipt.cs  RegistrationCost.cs  SubmitResult.cs  TokenAmount.cs  TxHash.cs
dotnet/Dilithia.Sdk/Validation/: BytecodeValidator.cs
dotnet/Dilithia.Sdk/Zk/: IDilithiaZkAdapter.cs
go/: Dockerfile.test  README.md  go.mod
go/docs/: NATIVE_BRIDGE.md  RESEARCH.md
go/sdk/: client.go  client_test.go  connectors.go  contracts.go  credentials.go  credentials_test.go  crypto.go  crypto_cgo.go  crypto_types.go  deploy.go  errors.go  multisig.go  multisig_test.go  names.go  names_test.go  rpc.go  shielded.go  types.go  validation.go  validation_test.go  zk_test.go
internal/: CI_RELEASE_STRATEGY.md  CRYPTO_ADAPTER_SURFACE.md  CRYPTO_ALIGNMENT.md  DILITHIA_RENAME_PLAN.md  ECOSYSTEM_SURFACE.md  REGISTRY_RELEASE_SETUP.md
java/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
java/docs/: NATIVE_BRIDGE.md  RESEARCH.md
java/src/main/java/org/dilithia/sdk/: Commitment.java  ContractCallBuilder.java  Contracts.java  DeployPayload.java  Dilithia.java  DilithiaAccount.java  DilithiaClient.java  DilithiaClientBuilder.java  DilithiaCryptoAdapter.java  DilithiaGasSponsorConnector.java  DilithiaKeypair.java  DilithiaMessagingConnector.java  DilithiaSignature.java  DilithiaSigner.java  DilithiaZkAdapter.java  NativeCryptoAdapters.java  Nullifier.java  StarkProofResult.java
java/src/main/java/org/dilithia/sdk/connector/: GasSponsorConnector.java  MessagingConnector.java
java/src/main/java/org/dilithia/sdk/crypto/: DilithiaAccount.java  DilithiaCryptoAdapter.java  DilithiaKeypair.java  DilithiaSignature.java  JsonMaps.java  NativeCryptoAdapters.java  NativeCryptoBridge.java
java/src/main/java/org/dilithia/sdk/exception/: CryptoException.java  DilithiaException.java  HttpException.java  RpcException.java  SerializationException.java  TimeoutException.java  ValidationException.java
java/src/main/java/org/dilithia/sdk/internal/: HttpTransport.java  Json.java  JsonRpcClient.java  Validation.java
java/src/main/java/org/dilithia/sdk/model/: Address.java  AddressSummary.java  Balance.java  BytecodeValidation.java  CanonicalPayload.java  Commitment.java  ContractAbi.java  Credential.java  CredentialSchema.java  DeployPayload.java  GasEstimate.java  MultisigTx.java  MultisigWallet.java  NameRecord.java  NetworkInfo.java  Nonce.java  Nullifier.java  PublicKey.java  QueryResult.java  Receipt.java  RegistrationCost.java  RpcResponse.java  SecretKey.java  SignedPayload.java  StarkProofResult.java  Token.java  TokenAmount.java  TxHash.java  VerificationResult.java
java/src/main/java/org/dilithia/sdk/request/: AbiRequest.java  AddressSummaryRequest.java  BalanceRequest.java  ContractCallBuilder.java  ContractQueryBuilder.java  ContractRequest.java  CredentialRequest.java  DeployRequest.java  MultisigRequest.java  NameServiceRequest.java  NetworkRequest.java  NonceRequest.java  ReceiptRequest.java  RpcRequest.java  ShieldedRequest.java  UpgradeRequest.java
java/src/main/java/org/dilithia/sdk/zk/: DilithiaZkAdapter.java
java/src/test/java/org/dilithia/sdk/: ContractCallBuilderTest.java  ContractsTest.java  CoverageGapTest.java  DilithiaClientTest.java
java/src/test/java/org/dilithia/sdk/connector/: ConnectorTest.java
native-core/: Cargo.toml  README.md
native-core/src/: lib.rs
native-zk/: Cargo.toml
native-zk/src/: lib.rs
python/: README.md  pyproject.toml
python/docs/: RESEARCH.md
python/native/: Cargo.toml  Dockerfile  README.md  pyproject.toml
python/native/src/: lib.rs
python/src/dilithia_sdk/: __init__.py  client.py  credentials.py  crypto.py  exceptions.py  models.py  validation.py  zk.py
python/src/dilithium_sdk/: __init__.py  client.py  crypto.py
python/tests/: test_client.py  test_validation.py
python/zk/: Cargo.toml  pyproject.toml
python/zk/src/: lib.rs
rust/: Cargo.toml  README.md
rust/docs/: RESEARCH.md
rust/src/: lib.rs
scripts/: build-python-native-docker.sh  build-typescript-native-docker.sh
tests/vectors/: canonical_payloads.json
typescript/: README.md  package-lock.json  package.json
typescript/docs/: RESEARCH.md
typescript/native/: Cargo.toml  Dockerfile  README.md  index.d.ts  index.js  package-lock.json  package.json
typescript/native/src/: lib.rs
typescript/src/: crypto.ts  errors.ts  index.ts  native-bridge.d.ts  types.ts  validation.ts  zk.ts
typescript/test/: sdk.test.mjs  validation.test.mjs
typescript/zk/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
typescript/zk/src/: lib.rs
(+15 files in other folders)
