[package]
name = "dilithium-sdk-native-core"
version = "0.3.0"
edition = "2021"
description = "Shared C ABI bridge over qsc-crypto for non-browser SDKs"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
qsc-crypto = { path = "../../qsc-rs/qsc-crypto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
