[package]
name = "dilithia-native-core"
version = "0.3.0"
edition = "2024"
description = "Shared C ABI bridge over dilithia-core for non-browser SDKs"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "=0.4.3"
dilithia-core = "=0.2.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
