[package]
name = "dilithia-native-zk"
version = "0.3.0"
edition = "2024"
description = "Shared C ABI STARK proving bridge over dilithia-stark for non-browser SDKs"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "=0.4.3"
dilithia-stark = "=0.2.0"
winter-math = "=0.13.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
