[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dilithium-sdk"
version = "0.3.0"
description = "Python SDK for the Dilithium RPC surface"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Dilithium" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
