[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dilithia-sdk"
version = "0.1.0"
description = "Python SDK for the Dilithia RPC surface"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Dilithia" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
