[package]
name = "dilithia-sdk-rust"
version = "0.2.0"
edition = "2021"
description = "Rust RPC client for the Dilithia SDK line"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dilithia/languages-sdk"
homepage = "https://github.com/dilithia/languages-sdk"
readme = "README.md"

[dependencies]
hex = "0.4"
serde_json = "1.0"
urlencoding = "2.1"
dilithia-core = "0.1.0"
