[package]
name = "dilithia-sdk-rust"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Rust client for the Dilithia blockchain — RPC, contracts, deploy, signing, shielded pool"
license = "MIT OR Apache-2.0"
homepage = "https://www.dilithia.org/"
readme = "README.md"
keywords = ["blockchain", "post-quantum", "dilithia", "rpc", "smart-contracts"]
categories = ["api-bindings", "cryptography"]
exclude = ["docs/"]

[dependencies]
hex = "=0.4.3"
serde_json = "=1.0.149"
urlencoding = "=2.1.3"
dilithia-core = "=0.5.0"
