[package]
name = "dilithia-sdk-python-crypto"
version = "0.3.0"
edition = "2021"

[lib]
name = "dilithia_sdk_python_crypto"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
pyo3 = { version = "0.22", features = ["extension-module"] }
dilithia-core = "0.1.0"
serde = { version = "1", features = ["derive"] }
