[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "dilithium-sdk-python-crypto"
version = "0.3.0"
description = "Native Python crypto bridge for the Dilithium SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [
  { name = "Dilithium" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython"
]

[tool.maturin]
bindings = "pyo3"
module-name = "dilithium_sdk_python_crypto"
strip = true
