[package]
name = "dilithia-sdk-zk"
version = "0.2.0"
edition = "2021"

[lib]
name = "dilithia_sdk_zk"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
pyo3 = { version = "0.22", features = ["extension-module"] }
dilithia-core = { version = "0.1.0", features = ["stark"] }
serde = { version = "1", features = ["derive"] }
