[package]
name = "dilithia-sdk-native"
version = "0.5.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "=0.4.3"
napi = { version = "=2.16.17", default-features = false, features = ["napi8"] }
napi-derive = "=2.16.13"
dilithia-core = "=0.5.0"
serde = { version = "=1.0.228", features = ["derive"] }

[build-dependencies]
napi-build = "=2.3.1"
