[package]
name = "dilithia-sdk-zk"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
dilithia-core = { version = "0.1.0", features = ["stark"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
napi-build = "2"
