[package]
name = "dilithia-sdk-zk"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "=0.4.3"
napi = { version = "=2.16.17", default-features = false, features = ["napi8"] }
napi-derive = "=2.16.13"
dilithia-stark = "=0.2.0"
winter-math = "=0.13.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

[build-dependencies]
napi-build = "=2.3.1"
